--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* ========================================
+﻿/* ========================================
    CSS Variables
    ======================================== */
 :root {
@@ -29,6 +29,7 @@ body {
   color: #475569;
   background-image: var(--bg-dark);
   background-size: 100% 100%;
+  zoom: 0.9; /* 90% of normal size */
 }
 
 /* ========================================
