--- a/style.css
+++ b/style.css
@@ -513,6 +513,7 @@ body {
   gap: 30px;
   justify-content: center;
   margin: 30px 0;
+  color: #8498b5;
 }
 
 /* ========================================
