--- a/style.css
+++ b/style.css
@@ -52,11 +52,11 @@ body {
 }
 
 .text-purple {
-  color: #9281ff;
+  color: #586aea;
 }
 
 .text-light-blue {
-  color: #62b8ff;
+  color: #6484c3;
 }
 
 .btn-primary {
@@ -432,15 +432,15 @@ body {
   border-radius: 10px;
 }
 
-#i8y47n {
+#whatsapp-bg {
   background-image: linear-gradient(70deg, rgba(0, 154, 100, 1) 10%, rgba(0, 47, 97, 1) 90%);
 }
 
-#ijf1ls {
+#discord-bg {
   background-image: linear-gradient(90deg, rgba(64, 22, 137, 1) 10%, rgba(0, 40, 84, 1) 90%);
 }
 
-#irsf52 {
+#instagram-bg {
   background-image: linear-gradient(70deg, rgba(69, 2, 181, 1) 10%, rgba(119, 13, 109, 1) 36.79%, rgba(159, 58, 14, 1) 76.17%, rgba(153, 107, 0, 1) 90%);
 }
 
