--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
 }
 
 .text-light-blue {
-  color: #6484c3;
+  color: #85adff;
 }
 
 .btn-primary {
@@ -436,7 +436,7 @@ body {
 }
 
 #godot-skill {
-  background-image: linear-gradient(135deg, rgba(71, 135, 203, 0.6) 0%, rgba(100, 132, 195, 0.8) 100%);
+  background-image: linear-gradient(135deg, rgba(71, 135, 203, 0.377) 0%, rgba(100, 132, 195, 0.8) 100%);
 }
 
 #webdev-skill {
